Unify common web service service code (part 1)
This huge patch starts down the road to unify all the web service common code.
This patch moves all potentially common code to one helper class.

Unfortunately, currently some services MongoExecutor and some use MongoStorageHandler under the hood - this doesn't fix that yet.  Some services support realms, some don't.  Again, not fixed yet.  Some services support pagination, or metadata ...(etc).  All that will be in subsequent patches, but all the code to fix is now in one place only.

Some behaviours are changed: the 'projection' parameter has completely vanished from any service that supported it (replaced with 'include'/'exclude'), and all service use the long forms of their parameter names; i.e.'query' instead of 'q' (this is now defined in ONE place instead of hard coded in 16!).

There will need to be some changes to the web-client to support the new parameter formats (if any are actually used).

Review-thread: http://icedtea.classpath.org/pipermail/thermostat/2017-July/024029.html
Review-thread: http://icedtea.classpath.org/pipermail/thermostat/2017-July/024240.html
